# wasi-http-client

./: Cargo.toml  README.md
.github/workflows/: ci.yml  release.yml
crates/test-programs/: Cargo.toml
crates/test-programs/artifacts/: Cargo.toml
examples/: README.md
src/: client.rs  lib.rs  request.rs  response.rs
tests/: main.rs
tests/program/: Cargo.toml
tests/program/src/: bindings.rs  lib.rs
tests/program/wit/: world.wit
