[package]
name = "wasi-http-client"
description = "HTTP client library for WASI"
readme = "README.md"
version = "0.2.1"
edition = "2021"
authors = ["Xinzhao Xu"]
categories = ["wasm"]
keywords = ["webassembly", "wasm", "wasi"]
repository = "https://github.com/wacker-dev/wasi-http-client"
license = "Apache-2.0"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
anyhow = "1.0.83"
wasi = "0.13.0"
url = "2.5.0"
serde = "1.0.201"
serde_json = { version = "1.0.117", optional = true }
serde_urlencoded = "0.7.1"

[features]
json = ["dep:serde_json"]
